2006-07-01 [colin]	2.3.1cvs50

	* src/prefs_account.c
		Typographic rules varying from language
		to language (in french "Protocole :"),
		we have to do that :)

2006-07-01 [ticho]	2.3.1cvs49

	* src/prefs_account.c
		Only use one temporary gchar* variable in
		prefs_account_protocol_set_optmenu().

2006-07-01 [ticho]	2.3.1cvs48

	* src/prefs_account.c
	* src/prefs_account.h
		Use GtkLabel for existing account protocol name.
		Created an array for protocol names and populate the
		combobox from it in a for() cycle.

2006-06-30 [colin]	2.3.1cvs47

	* src/compose.c
		Block undo when changing signature (by changing
		account)

2006-06-30 [paul]	2.3.1cvs46

	* src/send_message.c
		when editing From in the Compose window, use that address
		in the Return-Path: header
		Thanks to Colin

2006-06-30 [colin]	2.3.1cvs45

	* src/compose.c
		Fix signature replacement:
		- when no newline before separator
		- when reediting

2006-06-29 [colin]	2.3.1cvs44

	* src/folderview.c
	* src/folderview.h
	* src/mainwindow.c
	* src/summaryview.c
		Let 'View/Go to/Next marked' work like
		Next new & Next unread: across folders
		Change the select_on_entry pref to do
		what we want when changing folder
	* src/common/utils.c
		Fix single-quoted links 

2006-06-29 [colin]	2.3.1cvs43

	* src/gtk/gtkaspell.c
		"Sylpheed" and "Sylpheed-Claws" do exist !

2006-06-29 [colin]	2.3.1cvs42

	* src/imap.c
		Forgot to remove debug

2006-06-29 [colin]	2.3.1cvs41

	* src/imap.c
	* src/imap.h
	* src/mainwindow.c
		Disconnect from IMAP servers when going
		offline. Fixes bug #978 (going to offline-mode 
		won't close connections)

2006-06-29 [colin]	2.3.1cvs40

	* src/main.c
		Fix transient setting on failing plugins
		Patch by Fabien
	* src/plugins/pgpcore/sgpgme.c
		Only warn for OpenPGP. Most people don't
		have CMS available.

2006-06-29 [colin]	2.3.1cvs39

	* src/compose.c
		Fix Spelling menu (discrepancy between context menu
		and top menu when folder's dictionary isn't the 
		default one)